[package]
name = "timewaste"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
winit = { version = "0.30" }
env_logger = "0.10"
log = "0.4"
wgpu = "28.0"
pollster = "0.3"
bytemuck = { version = "1.25.0", features = ["derive"] }

[lib]

[profile.dev]
opt-level = 1

[profile.release]
strip = true
