[package]
name = "timewaste"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
cgmath = "0.18"
winit = { version = "0.30" }
env_logger = "0.10"
log = "0.4"
wgpu = "28.0"
pollster = "0.3"
bytemuck = { version = "1.25.0", features = ["derive"] }
tobj = { version = "4.0.3", features = ["async"] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[lib]

[profile.dev]
opt-level = 1

[profile.release]
strip = true

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3.0"
glob = "0.3.3"
